[project]
name = "zod"
version = "0.5.0"
description = "Zenseact Open Dataset"
authors = [{ name = "Zenseact", email = "opendataset@zenseact.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "tqdm>=4.60",
    "numpy>=1.19,<2.0",
    "scipy>=1.5,<2.0",
    "pillow>=7",
    "h5py>=3.1",
    "pyquaternion>=0.9",
    "numpy-quaternion>=2022.4.2",
    "dataclass-wizard>=0.22.2",
    "loguru>=0.7.3",
    "simplejpeg>=1.8.2",
    "mcap-protobuf-support>=0.5.3",
    "foxglove-schemas-protobuf>=0.3.0",
    "grpcio-tools>=1.71.0",
    "opencv-python>=4.11.0.86",
    "torchcodec>=0.4.0",
    "torch>=2.7.0",
    "av>=14.4.0",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
cli = [
    "typer[all]>=0.7.0",
    "dropbox>=11.36.0",
]
all = [
    "typer[all]>=0.7.0",
    "dropbox>=11.36.0",
    "opencv-python>=4,<5",
    "matplotlib>=3,<4",
    "plotly>=5,<6",
    "dash-bootstrap-components>=1.1,<2",
    "pandas>=1.3,<2",
    "notebook>=5",
    "imageio>=2,<3",
]

[project.scripts]
zod = "zod.cli.main:app"

[tool.uv]
# uv-specific settings (if any) can go here

[tool.setuptools.packages.find]
where = ["."]
include = ["zod*"]
exclude = ["idl*", "protos*"]

[tool.rye]
managed = true  # optional: if you're using Rye with uv

[tool.ruff]
line-length = 120
exclude = ["zod/eval/detection/_nuscenes_eval/*"]

[tool.ruff.lint]
select = ["I", "W", "E"]

[tool.test]
dependencies = ["pytest>=7"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
